style.css
@charset "UTF-8";
@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");

:root {
  --bg-primary: #ffffff;
  --bg-secondary: #090C19;
  --txt-primary: #090C19;
  --txt-secondary: #777777;
  --txt-tertiary: #38393F;
  --border: #ddd;
  --accent: 0, 219, 66;
}

:root.dark {
  --bg-primary: #090C19;
  --bg-secondary: #0c1022;
  --txt-primary: #ffffff;
  --txt-secondary: #777777;
  --txt-tertiary: #38393F;
  --border: #eee;
  --accent: 34, 254, 86;
}

body {
  font-family: "Roboto", sans-serif;
  margin: 0;
  padding: 0;
  color: var(--text-secondary);
  background-color: var(--bg-primary);
}

h1, h2, h3, strong {
  color: var(--txt-primary);
}

a {
  color: var(--txt-secondary);
  text-decoration: none;
}
a:not(nav a, .exclude) {
  border-bottom: 2px solid var(--border);
  transition-property: background-color;
  transition-duration: 0.2s;
}
a:not(nav a, .exclude):hover {
  background-color: var(--border);
}

nav {
  font-family: "Roboto Mono", monospace;
  user-select: none;
  background-color: var(--bg-secondary);
}
nav .navlink {
  position: relative;
}

nav .navlink-right {
  margin-left: auto;
  margin-right: 2em;
}

nav .navlink:hover::after {
  content: "█";
  animation: blink 1.3s infinite;
  position: absolute;
  bottom: 1px;
  right: -10px;
  color: rgb(var(--accent));
}

.header {
  font-family: "Roboto Mono", monospace;
  user-select: none;
  font-size: 3em;
  margin-bottom: 0;
}
.header .light-2 {
  text-shadow: 0 4px 4px rgba(var(--accent), 0.2);
}
.header .light-1 {
  text-shadow: 0 4px 4px rgba(221, 221, 221, 0.5);
}

@media (max-width: 725px) {
  .header {
    font-size: 2em;
  }
}
.avatar {
  width: 100px;
  height: 100px;
  border: 1px solid var(--border);
  border-radius: 50%;
  box-shadow: 0 4px 16px -4px var(--txt-secondary);
  cursor: pointer;
  transition-property: box-shadow;
  transition-duration: 0.2s;
}
.avatar:hover {
  box-shadow: 0 8px 16px -4px var(--txt-secondary);
}

/* LAYOUT */
.flex {
  display: flex;
  align-items: center;
}

.flex-center {
  justify-content: center;
}

.flex-item {
  margin: 0.5em;
}

.content {
  margin: 0 auto;
  max-width: 50em;
  padding: 3em;
}

.center {
  text-align: center;
}

/* COLORS */
.dark-1 {
  color: white;
}

.dark-2 {
  color: rgb(var(--accent));
}

.dark-3 {
  color: var(--txt-tertiary);
}

.light-1 {
  color: var(--txt-primary);
}

.light-2 {
  color: rgb(var(--accent));
}

/* ANIMATIONS */
@keyframes blink {
  0% {
    opacity: 1;
  }
  49% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  99% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

